--- a/04-前端工程化基础/06_webpack/package.json
+++ b/04-前端工程化基础/06_webpack/package.json
@@ -1,6 +1,12 @@
 {
   "name": "webpack_demo",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "./src/index.js",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.5.1"
+  },
+  "installConfig": {
+    "pnp": true
+  }
 }
