--- a/04-前端工程化基础/06_webpack/package.json
+++ b/04-前端工程化基础/06_webpack/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.5.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
