--- a/04-前端工程化基础/06_webpack/package.json
+++ b/04-前端工程化基础/06_webpack/package.json
@@ -7,7 +7,7 @@
     "pnp": true
   },
   "scripts": {
-    "dev": "webpack serve --config config/webpack-dev.config.js",
+    "dev": "webpack serve --config webpack.config.js",
     "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
