--- a/04-前端工程化基础/06_webpack/package.json
+++ b/04-前端工程化基础/06_webpack/package.json
@@ -7,8 +7,8 @@
     "pnp": true
   },
   "scripts": {
-    "dev": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "dev": "webpack serve --config ./config/webpack-dev.config.js",
+    "build": "webpack --config ./config/webpack-prod.config.js"
   },
   "dependencies": {
     "axios": "^1.5.1"
