--- a/05-Vue3全家桶/03_Vue的CompositionAPI/02_setup函数定义数据/package.json
+++ b/05-Vue3全家桶/03_Vue的CompositionAPI/02_setup函数定义数据/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "pino": "^8.16.0",
+    "pino-pretty": "^10.2.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
