--- a/05-Vue3全家桶/03_Vue的CompositionAPI/08_setup语法糖-案例/package.json
+++ b/05-Vue3全家桶/03_Vue的CompositionAPI/08_setup语法糖-案例/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@voerkalogger/core": "^1.1.7",
     "core-js": "^3.8.3",
+    "logan-web": "^1.1.0",
+    "loglevel": "^1.8.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
