--- a/05-Vue3全家桶/05_Vue的状态管理/02_vue_pinia/package.json
+++ b/05-Vue3全家桶/05_Vue的状态管理/02_vue_pinia/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "less": "^4.2.0",
-    "less-loader": "^11.1.3"
+    "less-loader": "^11.1.3",
+    "vue-cli-plugin-pinia": "~0.2.4"
   }
 }
