--- a/05-Vue3全家桶/05_Vue的状态管理/03_vue_axios/package.json
+++ b/05-Vue3全家桶/05_Vue的状态管理/03_vue_axios/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.0.5",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "core-js": "^3.33.1",
     "vue": "^3.3.6"
