--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,12 +12,15 @@
     "axios": "^1.5.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
+    "vant": "^4.7.2",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^4.4.0",
     "less": "^4.2.0",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.0"
   }
 }
