--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "simplebar-vue": "^2.3.3",
+    "underscore": "^1.13.6",
     "vant": "^4.7.2",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
