--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.10",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "simplebar-vue": "^2.3.3",
     "underscore": "^1.13.6",
     "vant": "^4.7.2",
