--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
+    "default-passive-events": "^2.0.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -18,6 +19,7 @@
     "underscore": "^1.13.6",
     "vant": "^4.7.3",
     "vue": "^3.3.7",
+    "vue-baidu-map-3x": "^1.0.35",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
