--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rimbu/sorted": "^1.1.0",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "default-passive-events": "^2.0.0",
