--- a/07-React18全家桶/03_组件化开发/08_react-app-optimize/package.json
+++ b/07-React18全家桶/03_组件化开发/08_react-app-optimize/package.json
@@ -9,8 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.5.0",
-    "@react-buddy/ide-toolbox": "^2.4.0"
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "craco start",
