--- a/07-React18全家桶/05_React的CSS解决方案/04_react-app-css/package.json
+++ b/07-React18全家桶/05_React的CSS解决方案/04_react-app-css/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "classnames": "^2.5.0",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
