--- a/07-React18全家桶/06_redux/02_react-app-redux/package.json
+++ b/07-React18全家桶/06_redux/02_react-app-redux/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^14.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
