--- a/07-React18全家桶/06_redux/03_react-app-redux/package.json
+++ b/07-React18全家桶/06_redux/03_react-app-redux/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^3.5.1"
   },
   "scripts": {
