--- a/07-React18全家桶/07_React路由/01_react-app-router/package.json
+++ b/07-React18全家桶/07_React路由/01_react-app-router/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@redux-devtools/extension": "^3.3.0",
-    "@testing-library/jest-dom": "^6.1.6",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "axios": "^1.6.3",
+    "bootstrap": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
+    "sass": "^1.69.7",
     "web-vitals": "^3.5.1"
   },
   "scripts": {
