--- a/07-React18全家桶/10_React项目/02_react-app/package.json
+++ b/07-React18全家桶/10_React项目/02_react-app/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nutui/icons-react": "^1.0.2",
+    "@nutui/nutui-react": "^2.3.7",
     "@reduxjs/toolkit": "^2.0.1",
-    "antd-mobile": "^5.34.0",
-    "antd-mobile-icons": "^0.3.0",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
@@ -47,9 +47,12 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "postcss-px-to-viewport-8-plugin": "^1.2.3",
+    "babel-plugin-import": "^1.13.8",
     "code-inspector-plugin": "^0.4.5",
     "concurrently": "^8.2.2",
     "craco-less": "^3.0.1",
-    "json-server": "^1.0.0-alpha.22"
+    "json-server": "^1.0.0-alpha.22",
+    "postcss": "^8.3.0"
   }
 }
